[package]
name = "lox"
version = "0.1.0"
authors = ["Tim Peters <tim@darksecond.nl>"]
edition = "2018"
default-run = "lox"

[dependencies]
lox-bytecode = { path = "../lox-bytecode" }
lox-vm = { path = "../lox-vm" }
lox-compiler = { path = "../lox-compiler" }
serde_json = "1.0"

[dev-dependencies]
regex = "1"