[package]
name = "lox"
version = "0.1.0"
authors = ["Tim Peters <tim@darksecond.nl>"]
edition = "2021"
default-run = "lox"

[dependencies]
lox-bytecode = { path = "../lox-bytecode" }
lox-vm = { path = "../lox-vm" }
lox-std = { path = "../lox-std" }
lox-compiler = { path = "../lox-compiler" }
serde_json = "1.0"

[dev-dependencies]
regex = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "vm_benches"
harness = false
